fix(styles): Responsive behaviour
Changed the behaviour of panels on smaller screens:
- preview overlaps the editor
- aspect ratio of editor and list is changed in favor of the editor

--- a/client/app/scripts/superdesk-authoring/styles/authoring.less
+++ b/client/app/scripts/superdesk-authoring/styles/authoring.less
@@ -57,9 +57,15 @@
 	&.opened {
 		.embedded-list-view {
 			right: 44%;
+			@media only screen and (max-width : 1330px) {
+                right: 54%;
+            }
 		}
 		.embedded-auth-view {
 			width: 44%;
+			@media only screen and (max-width : 1330px) {
+                width: 54%;
+            }
 		}
 	}
 	.page-content-container {
